--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -22,6 +22,8 @@
         <TextBox x:Name="outputT" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" Text="Output" VerticalAlignment="Center" Grid.Column="1"/>
         <TextBox x:Name="fT" HorizontalAlignment="Stretch" Height="23" TextWrapping="Wrap" Text="Function Name" VerticalAlignment="Center" Grid.Column="2"/>
         <Button Content="Add" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Click="Add_Clicked"/>
-        <local:FlowChartDiagram x:Name="diagram" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" Chart="{Binding chart,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+        <Grid x:Name="diagram" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
+            <Canvas x:Name="canva"/>
+        </Grid>
     </Grid>
 </Window>
