--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -23,7 +23,10 @@
         <TextBox x:Name="fT" HorizontalAlignment="Stretch" Height="24" TextWrapping="Wrap" Text="Function Name" VerticalAlignment="Center" Grid.Column="2"/>
         <Button Content="Add" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Click="Add_Clicked" Height="20" Margin="0,2"/>
         <Grid x:Name="diagram" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
-            <Canvas HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="canva"/>
+            <Canvas HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="canva">
+                <TextBlock x:Name="WarningBlock" Text="{Binding Warning, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="Fuchsia"/>
+            </Canvas>
+
         </Grid>
     </Grid>
 </Window>
