--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,5 +1,4 @@
 ﻿<Window x:Class="WpfApp1.MainWindow"
-        DataContext="{StaticResource fc}"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -13,20 +12,25 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="24"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="inputsT" HorizontalAlignment="Stretch" Height="24" TextWrapping="Wrap" Text="Inputs (Space Sperated)" VerticalAlignment="Center" GotFocus="In_Focused"/>
-        <TextBox x:Name="outputT" HorizontalAlignment="Stretch" Height="24" TextWrapping="Wrap" Text="Output" VerticalAlignment="Center" Grid.Column="1"/>
-        <TextBox x:Name="fT" HorizontalAlignment="Stretch" Height="24" TextWrapping="Wrap" Text="Function Name" VerticalAlignment="Center" Grid.Column="2"/>
-        <Button Content="Add" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Center" Click="Add_Clicked" Height="20" Margin="0,2"/>
-        <Grid x:Name="diagram" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4">
+        <TextBlock Text="Comma Sperated In: " Grid.Column="0"/>
+        <TextBox x:Name="inputsT" HorizontalAlignment="Stretch" Grid.Column="1" TextWrapping="Wrap" Text="" VerticalAlignment="Center" GotFocus="In_Focused"/>
+        <TextBlock Text="  Output: " Grid.Column="2"/>
+        <TextBox x:Name="outputT" HorizontalAlignment="Stretch" Grid.Column="3" TextWrapping="Wrap" VerticalAlignment="Center" />
+        <TextBlock Text=" Function Name:" Grid.Column="4"/>
+        <TextBox x:Name="fT" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="5"/>
+        <Button Content="Add" Grid.Column="6" HorizontalAlignment="Stretch" VerticalAlignment="Center" Click="Add_Clicked" Height="20" Margin="0,2"/>
+        <Grid Margin="50" x:Name="diagram" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="7">
             <Canvas HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="canva">
-                <TextBlock x:Name="WarningBlock" Text="{Binding Warning, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="Fuchsia"/>
             </Canvas>
-
+            <TextBlock Text="{Binding Path=Warning, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Width="300" x:Name="WarningBlock" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="Red"/>
         </Grid>
     </Grid>
 </Window>
