--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,38 +1,37 @@
 ﻿<Window x:Class="WpfApp1.MainWindow"
+        x:Name="mainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid x:Name="rootGrid">
+        Title="MainWindow" Height="450" Width="800" AllowsTransparency="True" WindowStyle="None" WindowState="Maximized">
+    <Grid x:Name="rootGrid" Background="#212121">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="24"/>
-            <RowDefinition Height="24"/> 
-            <RowDefinition/>
+            <RowDefinition Height="350*"/>
+            <RowDefinition Height="24*"/>
+            <RowDefinition Height="45*"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Comma Sperated In: " Grid.Column="0"/>
-        <TextBox x:Name="inputsT" HorizontalAlignment="Stretch" Grid.Column="1" TextWrapping="Wrap" Text="" VerticalAlignment="Center" GotFocus="In_Focused"/>
-        <TextBlock Text="  Output: " Grid.Column="2"/>
-        <TextBox x:Name="outputT" HorizontalAlignment="Stretch" Grid.Column="3" TextWrapping="Wrap" VerticalAlignment="Center" />
-        <TextBlock Text=" Function Name:" Grid.Column="4"/>
-        <TextBox x:Name="fT" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" Grid.Column="5"/>
-        <Button Content="Add" Grid.Column="6" HorizontalAlignment="Stretch" VerticalAlignment="Center" Click="Add_Clicked" Height="20" Margin="0,2"/>
-        <TextBlock Text="{Binding Path=Warning, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" x:Name="WarningBlock" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="Red"/>
-
-        <Grid Margin="25" x:Name="diagram" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="7">
+        <Button Content="close" Grid.Row="0" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Top" Click="Close_Clicked"/>
+        <TextBlock Text="Comma Sperated Inputs: " Grid.Column="0" Foreground="White" VerticalAlignment="Center" FontSize="16" FontWeight="Thin" HorizontalAlignment="Left" Margin="10,0,0,2" Height="22" Grid.Row="1" Width="178"/>
+        <TextBox x:Name="inputsT" HorizontalAlignment="Stretch" Grid.Row="2" TextWrapping="Wrap" Text="" GotFocus="In_Focused" Margin="10,0" Background="#FF212121" BorderBrush="{x:Null}" FontSize="36" FontWeight="Light" Foreground="#FF73E04B" CharacterCasing="Upper"/>
+        <TextBlock Text="  Output: " Grid.Column="1" Grid.Row="1" FontSize="16" FontWeight="Thin" VerticalAlignment="Center" Margin="63,0,71,2" HorizontalAlignment="Center" Foreground="White" Width="64" Height="22"/>
+        <TextBox x:Name="outputT" HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" Margin="10,0" Background="#FF212121" BorderBrush="{x:Null}" Foreground="#FF73E04B" FontSize="32" FontWeight="Light" CharacterCasing="Upper" />
+        <TextBlock Text=" Function Name:" Grid.Column="2" Grid.Row="1" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="33,0,44,2" FontSize="16" Width="121" FontWeight="Thin" Height="22"/>
+        <TextBox x:Name="fT" Text="F1" HorizontalAlignment="Stretch" Grid.Row="2" TextWrapping="Wrap" Grid.Column="2" Margin="10,0" Background="#FF212121" BorderBrush="{x:Null}" Foreground="#FF73E04B" FontSize="32" FontWeight="Light"/>
+        <Button Content="Add" Grid.Column="3" HorizontalAlignment="Left" Grid.Row="1" Click="Add_Clicked" Margin="10,0,0,0" FontSize="32" FontWeight="Light" Background="{x:Null}" Foreground="White" BorderBrush="{x:Null}" Grid.RowSpan="2" Width="178"/>
+        <TextBlock Text="{Binding Path=Warning, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" x:Name="WarningBlock" Foreground="Red" FontWeight="Light" VerticalAlignment="Bottom" HorizontalAlignment="Center" Grid.ColumnSpan="2" Grid.Column="1" FontSize="16"/>
+        <Grid Margin="10" x:Name="diagram" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
             <Canvas HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="canva">
             </Canvas>
         </Grid>
+        <!--<Button Content="Clear" Grid.Column="3" HorizontalAlignment="Right" Grid.Row="1" Click="Clear_Clicked" Margin="0,0,5,0" FontSize="32" FontWeight="Light" Background="{x:Null}" Foreground="White" BorderBrush="{x:Null}" Grid.RowSpan="2"/>-->
     </Grid>
 </Window>
