--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -20,10 +20,10 @@
             <RowDefinition Height="67*"/>
         </Grid.RowDefinitions>
         <Button Content="close" Grid.Row="0" Grid.Column="3" HorizontalAlignment="Right" VerticalAlignment="Top" Click="Close_Clicked" Height="20" Width="31"/>
-        <TextBlock Text="Comma Sperated Inputs: " Grid.Column="0" Foreground="White" VerticalAlignment="Center" FontSize="16" FontWeight="Thin" HorizontalAlignment="Left" Margin="12,6,0,5" Height="22" Grid.Row="1" Width="178"/>
-        <TextBox x:Name="inputsT" HorizontalAlignment="Stretch" Grid.Row="2" TextWrapping="Wrap" Text="" GotFocus="In_Focused" Margin="10,0" Background="#FF212121" BorderBrush="{x:Null}" FontSize="36" FontWeight="Light" Foreground="#FF73E04B" CharacterCasing="Upper"/>
-        <TextBlock Text="  Output: " Grid.Column="1" Grid.Row="1" FontSize="16" FontWeight="Thin" VerticalAlignment="Center" Margin="64,0,72,0" HorizontalAlignment="Center" Foreground="White" Width="64" Height="22"/>
-        <TextBox x:Name="outputT" HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="1" TextWrapping="Wrap" Margin="10,0" Background="#FF212121" BorderBrush="{x:Null}" Foreground="#FF73E04B" FontSize="32" FontWeight="Light" CharacterCasing="Upper" />
+        <TextBlock Text="Comma Sperated Inputs: " Grid.Column="1" Foreground="White" VerticalAlignment="Center" FontSize="16" FontWeight="Thin" HorizontalAlignment="Left" Margin="12,6,0,5" Height="22" Grid.Row="1" Width="178"/>
+        <TextBox x:Name="inputsT" Grid.Column="1" HorizontalAlignment="Stretch" Grid.Row="2" TextWrapping="Wrap" Text="" GotFocus="In_Focused" Margin="10,0" Background="#FF212121" BorderBrush="{x:Null}" FontSize="36" FontWeight="Light" Foreground="#FF73E04B" CharacterCasing="Upper"/>
+        <TextBlock Text="  Output: " Grid.Row="1" Grid.Column="0" FontSize="16" FontWeight="Thin" VerticalAlignment="Center" Margin="64,0,72,0" HorizontalAlignment="Center" Foreground="White" Width="64" Height="22"/>
+        <TextBox x:Name="outputT" HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="0" TextWrapping="Wrap" Margin="10,0" Background="#FF212121" BorderBrush="{x:Null}" Foreground="#FF73E04B" FontSize="32" FontWeight="Light" CharacterCasing="Upper" />
         <TextBlock Text=" Function Name:" Grid.Column="2" Grid.Row="1" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="34,0,45,0" FontSize="16" Width="121" FontWeight="Thin" Height="22"/>
         <TextBox x:Name="fT" Text="F1" HorizontalAlignment="Stretch" Grid.Row="2" TextWrapping="Wrap" Grid.Column="2" Margin="10,0" Background="#FF212121" BorderBrush="{x:Null}" Foreground="#FF73E04B" FontSize="32" FontWeight="Light"/>
         <Button Content="Add" Grid.Column="3" HorizontalAlignment="Left" Grid.Row="1" Click="Add_Clicked" Margin="10,0,0,0" FontSize="32" FontWeight="Light" Background="{x:Null}" Foreground="White" BorderBrush="{x:Null}" Grid.RowSpan="2" Width="178"/>
